--- a/Level 1/Subscript & Superscript.html
+++ b/Level 1/Subscript & Superscript.html
@@ -3,7 +3,7 @@
 <title>04</title>
 </head>
 <body>
-<CENTER><H1>Subscript & Superscript</H1></CENTER>
+<CENTER><H1>Subscript &amp; Superscript</H1></CENTER>
 chemical formula for water : H<sub>2</sub>O<BR>
 chemical formula for acetic acid : CH<sub>3</sub>COOH
 </body>
