Code in level 1 is refined and enhanced

--- a/Level 1/Subscript & Superscript.html
+++ b/Level 1/Subscript & Superscript.html
@@ -1,10 +1,19 @@
 <html>
 <head>
-<title>04</title>
+	<title>Sub n Sup</title>
 </head>
 <body>
-<CENTER><H1>Subscript &amp; Superscript</H1></CENTER>
-chemical formula for water : H<sub>2</sub>O<BR>
-chemical formula for acetic acid : CH<sub>3</sub>COOH
+	<center>
+		<H1>Subscript &amp; Superscript</H1>
+	</center>
+	<h3>Chemistry</h3>
+	chemical formula for water : H<sub>2</sub>O
+	<BR>
+	chemical formula for acetic acid : CH<sub>3</sub>COOH
+	<hr>
+	<h3>Mathematics:</h3>
+	Pythagoras Theorem: base<sup>2</sup> + height<sup>2</sup> = hypotenuse<sup>2</sup>
+	<br>
+	Identity: (a + b)<sup>2</sup> = a<sup>2</sup> + b<sup>2</sup> + 2ab
 </body>
 </html>
