slight modifications and a new file

--- a/Level 3/TIme Table.html
+++ b/Level 3/TIme Table.html
@@ -3,35 +3,72 @@
 <title>Time Table</title>
 </head>
 <body bgcolor="#abc">
-	<center>
-	<FONT FACE="serif" COLOR="navy" SIZE="6">Time Table</FONT>
+<center>
+	<font FACE="serif" COLOR="navy" SIZE="6">Time Table</font>
+	<br><br>
 
-	<font face="Segoe UI">
-	<BR><BR>
-	<TABLE BORDER="3" width="850" cellpadding="10" cellspacing="0" BORDERCOLOR="NAVY">
-	<TR>
-	<TH>Day</TH><TH width="80">01</TH><TH width="80">02</TH><TH width="80">03</TH><TH width="80">04</TH><TH width="80">05</TH><TH width="80">06</TH><TH width="80">07</TH><TH width="80">08</TH>
-	</TR>
-	<TR>
-	<TH>Mon</TH><th bgcolor="#AA66CC">NMST</th><th bgcolor="#55FF55">CST</th><th COLSPAN="2">PSTC / CST-Lab</th><th bgcolor="#FFFFFF"></th><th bgcolor="FFAAAA">CN</th><th COLSPAN="2">NMST-Lab / PSTC-Lab</th>
-	</TR>
-	<TR>
-	<TH>Tue</TH><th colspan="2">CN-Lab / PSTC</th><th bgcolor="#55FF55">CST</th><th bgcolor="#FFFFFF"></th><th colspan="2">PSTC-Lab / CST-Lab</th><th>Mentoring</th><th bgcolor="#AA66CC">NMST</th>
-	</TR>
-	<TR>
-	<TH>Wed</TH><th colspan="2">CST-Lab / PSTC-Lab</th><th bgcolor="#55FF55">CST</th><th bgcolor="#FFFFFF"></th><th colspan="2">PSTC-Lab / CN-Lab</th><th bgcolor="#FFFFFF"></th><th bgcolor="#AA66CC">NMST</th>
-	</TR>
-	<TR>
-	<TH>Thu</TH><th bgcolor="#55FF55">CST</th><th bgcolor="#FFFFFF"></th><th colspan="2">PSTC-Lab / CN-Lab</th><th bgcolor="#FFFFFF"></th><th colspan="2">CST-Lab / PSTC-Lab</th><th bgcolor="FFAAAA">CN</th>
-	</TR>
-	<TR>
-	<TH>Fri</TH><th colspan="2">CST-Lab</th><th bgcolor="FFAAAA">CN</th><th bgcolor="#FFFFFF"></th><th colspan="2">CN-Lab / PSTC-Lab</th><th colspan="2">CST-Lab / NMST-Lab</th>
-	</TR>
-	<CAPTION>CSE 3E</CAPTION>
-	</TABLE>
+	<table BORDER="3" width="850" cellpadding="10" cellspacing="0" BORDERCOLOR="NAVY">
+		<tr>
+			<th>Day</th>
+			<th width="80">01</th>
+			<th width="80">02</th>
+			<th width="80">03</th>
+			<th width="80">04</th>
+			<th width="80">05</th>
+			<th width="80">06</th>
+			<th width="80">07</th>
+			<th width="80">08</th>
+		</tr>
+		<tr>
+			<th>Mon</th>
+			<th bgcolor="#AA66CC">NMST</th>
+			<th bgcolor="#55FF55">CST</th>
+			<th COLSPAN="2">PSTC / CST-Lab</th>
+			<th bgcolor="#FFFFFF"></th>
+			<th bgcolor="FFAAAA">CN</th>
+			<th COLSPAN="2">NMST-Lab / PSTC-Lab</th>
+		</tr>
+		<tr>
+			<th>Tue</th>
+			<th colspan="2">CN-Lab / PSTC</th>
+			<th bgcolor="#55FF55">CST</th>
+			<th bgcolor="#FFFFFF"></th>
+			<th colspan="2">PSTC-Lab / CST-Lab</th>
+			<th>Mentoring</th>
+			<th bgcolor="#AA66CC">NMST</th>
+		</tr>
+		<tr>
+			<th>Wed</th>
+			<th colspan="2">CST-Lab / PSTC-Lab</th>
+			<th bgcolor="#55FF55">CST</th>
+			<th bgcolor="#FFFFFF"></th>
+			<th colspan="2">PSTC-Lab / CN-Lab</th>
+			<th bgcolor="#FFFFFF"></th>
+			<th bgcolor="#AA66CC">NMST</th>
+		</tr>
+		<tr>
+			<th>Thu</th><th bgcolor="#55FF55">CST</th>
+			<th bgcolor="#FFFFFF"></th>
+			<th colspan="2">PSTC-Lab / CN-Lab</th>
+			<th bgcolor="#FFFFFF"></th>
+			<th colspan="2">CST-Lab / PSTC-Lab</th>
+			<th bgcolor="FFAAAA">CN</th>
+		</tr>
+		<tr>
+			<th>Fri</th>
+			<th colspan="2">CST-Lab</th>
+			<th bgcolor="FFAAAA">CN</th>
+			<th bgcolor="#FFFFFF"></th>
+			<th colspan="2">CN-Lab / PSTC-Lab</th>
+			<th colspan="2">CST-Lab / NMST-Lab</th>
+		</tr>
+		<caption>CSE 3E</caption>
+	</table>
 
-	</font>
 	<br><br><br><br>
+
 	<font face="cursive"><i>Thats all Folks ! !</i></font>
+
+</center>
 </body>
 </html>
