--- a/Level 3/Class Report.html
+++ b/Level 3/Class Report.html
@@ -9,27 +9,47 @@
 	<br><br>
 
 	<table border="3" width="600" cellpadding="5" cellspacing="1" bordercolor="olive">
-		<TR>
-			<TH COLSPAN=5>Student List CSE 3E-01</TH>
-		</TR>
-		<TR>
-			<TH>S No.</TH><TH>Roll No</TH><TH>Name</TH><TH>Grade Point</TH><TH>From</TH>
-		</TR>
-		<TR>
-			<TD>1</TD><TD>151099##</TD><TD></TD><TD>9.50</TD><TD>Mumbai</TD>
-		</TR>
-		<TR>
-			<TD>2</TD><TD>151099##</TD><TD></TD><TD>9.20</TD><TD>Chandigarh</TD>
-		</TR>
-		<TR>
-			<TH COLSPAN=5>Student List CSE 3E-02</TH>
-		</TR>
-		<TR>
-			<TD>1</TD><TD>151099##</TD><TD></TD><TD>8.80</TD><TD>Delhi</TD>
-		</TR>
-		<TR>
-			<TD>2</TD><TD>151099##</TD><TD></TD><TD>9.20</TD><TD>Chandigarh</TD>
-		</TR>
+		<tr>
+			<th COLSPAN=5>Student List CSE 3E-01</th>
+		</tr>
+		<tr>
+			<th>S No.</th>
+			<th>Roll No</th>
+			<th>Name</th>
+			<th>Grade Point</th>
+			<th>From</th>
+		</tr>
+		<tr>
+			<TD>1</TD>
+			<TD>151099##</TD>
+			<TD></TD>
+			<TD>9.50</TD>
+			<TD>Mumbai</TD>
+		</tr>
+		<tr>
+			<TD>2</TD>
+			<TD>151099##</TD>
+			<TD></TD>
+			<TD>9.20</TD>
+			<TD>Chandigarh</TD>
+		</tr>
+		<tr>
+			<th COLSPAN=5>Student List CSE 3E-02</th>
+		</tr>
+		<tr>
+			<TD>1</TD>
+			<TD>151099##</TD>
+			<TD></TD>
+			<TD>8.80</TD>
+			<TD>Delhi</TD>
+		</tr>
+		<tr>
+			<TD>2</TD>
+			<TD>151099##</TD>
+			<TD></TD>
+			<TD>9.20</TD>
+			<TD>Chandigarh</TD>
+		</tr>
 		<caption>Student List CSE</caption>
 	</table>
 
